change font color and add credit

--- a/css/main.css
+++ b/css/main.css
@@ -2,19 +2,28 @@ html, body {
     max-width: 100% !important;
     overflow-x: hidden !important;
 }
-p, h1, h2, h3, h4, h5 {
+p {
   font-family:  "Courier New",
 "Lucida Console", monospace;
  color: white;
 }
 
+h1, h2, h3, h4, h5 {
+ color: #337ab7;
+ font-family:  "avenir", courier, monospace;
+ text-transform: uppercase;
+}
+
+a h3{
+  color: #337ab7;
+  text-shadow: 2px 2px black;
+}
 
 #black {
   background-color: black;
 }
 
 h1, h2, h3, a {
-  text-shadow:1px 1px gold;
 }
 
 .container img {
@@ -28,7 +37,7 @@ div #happiness {
 #countup p {
 display: inline-block;
 padding: 5px;
-margin-top: 10px;
+margin-top: 20px;
 font-size: 2.7em;
 line-height: 1;
 text-align: center;
@@ -61,43 +70,64 @@ body {
     text-align: center;
 }
 
-.header-unit {
-  height: 600px;
-  border: none;
-  border-right:none;
-  border-left: none;
-  position: relative;
-  padding: 20px;
+.headline {
+  height: 560px;
+  margin-top:140px;
 }
-#video-container {
+/*test*/
+.video-container {
+  height: 580px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+  height: 100%;
+}
+.video-container img {
+-webkit-filter: opacity(.7);
+filter: opacity(.5);
+}
 
-}
-#video-container {
-position: absolute;
-  top: -50%;
-    left: -50%;
-    right: -50%;
-    width: 200%;
-    height: 200%;
-    overflow: hidden;
-}
-video {
-	position:absolute;
-	z-index:-1;
-}
-video.fillWidth {
+.fillWidth {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  min-width: 50%;
-  min-height: 50%;
-  -webkit-filter: opacity(.5);
-filter: opacity(.5);
-overflow: hidden;
+  width: 100%;
+  height: 100%;
+    -webkit-filter: brightness(.3);
+    filter: brightness(.5);
 }
+
+@media (min-aspect-ratio: 16/9) {
+  .fillWidth {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+ .fillWidth {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .video-container {
+    background: url('thailand-coup.jpg') center center / cover no-repeat !important;
+  }
+
+  .fillWidth {
+    display: none;
+  }
+}
+/*test*/
+
+
+
 #banner {
   height: 900px;
   overflow: hidden;
